array.island.Island.scala.error
Erreur de compilation :
Island:9: error: reassignment to val
    x=max
     ^